[tool.poetry]
name = "Clueless"
version = "2.2.1"
description = "A pxls.space stats discord bot and more!"
authors = ["GrayTurtles"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = "^3.8.1"
alive-progress = "^2.3.1"
bar-chart-race = "^0.1.0"
beautifulsoup4 = "^4.10.0"
disnake = "^2.4.0"
blend-modes = "^2.1.0"
matplotlib = "^3.5.1"
numpy = "^1.21"
pandas = "^1.4.1"
Pillow = "^9.0.1"
plotly = "^5.6.0"
python-dotenv = "^0.19.2"
pytz = "^2021.3"
websockets = "^10.2"
numba = "^0.55.1"
kaleido = "0.2.1"
rapptz-asqlite = "^1.0.0"
"backports.zoneinfo" = { version = "^0.2.1", python = "<3.9" }
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=90